[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/SaveLoadMenu.gd" id="1_script"]

[node name="SaveLoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "บันทึกเกม / โหลดเกม"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SlotsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Slot1" type="HBoxContainer" parent="Panel/VBoxContainer/SlotsContainer"]
layout_mode = 2

[node name="SlotLabel" type="Label" parent="Panel/VBoxContainer/SlotsContainer/Slot1"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ช่องที่ 1: (ว่าง)"

[node name="SaveBtn1" type="Button" parent="Panel/VBoxContainer/SlotsContainer/Slot1"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "บันทึก"

[node name="LoadBtn1" type="Button" parent="Panel/VBoxContainer/SlotsContainer/Slot1"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "โหลด"
disabled = true

[node name="Slot2" type="HBoxContainer" parent="Panel/VBoxContainer/SlotsContainer"]
layout_mode = 2

[node name="SlotLabel" type="Label" parent="Panel/VBoxContainer/SlotsContainer/Slot2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ช่องที่ 2: (ว่าง)"

[node name="SaveBtn2" type="Button" parent="Panel/VBoxContainer/SlotsContainer/Slot2"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "บันทึก"

[node name="LoadBtn2" type="Button" parent="Panel/VBoxContainer/SlotsContainer/Slot2"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "โหลด"
disabled = true

[node name="Slot3" type="HBoxContainer" parent="Panel/VBoxContainer/SlotsContainer"]
layout_mode = 2

[node name="SlotLabel" type="Label" parent="Panel/VBoxContainer/SlotsContainer/Slot3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ช่องที่ 3: (ว่าง)"

[node name="SaveBtn3" type="Button" parent="Panel/VBoxContainer/SlotsContainer/Slot3"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "บันทึก"

[node name="LoadBtn3" type="Button" parent="Panel/VBoxContainer/SlotsContainer/Slot3"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "โหลด"
disabled = true

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CloseBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "ปิด"

[connection signal="pressed" from="Panel/VBoxContainer/SlotsContainer/Slot1/SaveBtn1" to="." method="_on_save_btn_pressed" binds= [1]]
[connection signal="pressed" from="Panel/VBoxContainer/SlotsContainer/Slot1/LoadBtn1" to="." method="_on_load_btn_pressed" binds= [1]]
[connection signal="pressed" from="Panel/VBoxContainer/SlotsContainer/Slot2/SaveBtn2" to="." method="_on_save_btn_pressed" binds= [2]]
[connection signal="pressed" from="Panel/VBoxContainer/SlotsContainer/Slot2/LoadBtn2" to="." method="_on_load_btn_pressed" binds= [2]]
[connection signal="pressed" from="Panel/VBoxContainer/SlotsContainer/Slot3/SaveBtn3" to="." method="_on_save_btn_pressed" binds= [3]]
[connection signal="pressed" from="Panel/VBoxContainer/SlotsContainer/Slot3/LoadBtn3" to="." method="_on_load_btn_pressed" binds= [3]]
[connection signal="pressed" from="Panel/VBoxContainer/CloseBtn" to="." method="_on_close_btn_pressed"]
